# hpc-helper

./: .gitignore  .prospector.yml  README.md  _tasks.py  pyproject.toml  ruff.toml
.github/workflows/: test-and-lint.yml
hpc_helper/: __init__.py  _exceptions.py  _hpc_helper.py  _types.py  _utils.py
src/hpc_helper/: __init__.py  _hpc_helper.py
tests/: test_hpc_helper.py
