[tool.poetry]
name = "hpc_helper"
version = "0.3.1"
description = "Python package with helper functions for working with FAU's High Performance Cluster (HPC)."
authors = ["Robert Richer <robert.richer@fau.de>"]
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/hpc-helper"
repository = "https://github.com/mad-lab-fau/hpc-helper"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^3.0.0"
prospector = "^1"
black = "^22.3.0"
isort = "^5.10.1"
poethepoet = "^0.11.0"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true


[tool.poe.tasks]
_black = "black ."
_black_check = "black . --check"
_isort = "isort **/*.py"
_isort_check = "isort **/*.py --check-only"

# Reformat all files using black and sort import
docs = {"script" = "_tasks:task_docs"}
format = { sequence = ["_black", "_isort"], help = "Format all files." }
format_check = ["_black_check", "_isort_check"]
lint = {cmd = "prospector", help = "Lint all files with Prospector." }
test = {cmd = "pytest --cov=hpc-helper --cov-report=xml", help = "Run Pytest with coverage." }
update_version = {"script" = "_tasks:task_update_version"}
default = {sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing."}
